--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
   "coc.preferences.formatOnType": true,
-  "rust-analyzer.updates.channel": "nightly"
+  "rust-analyzer.updates.channel": "nightly",
+  "rust-analyzer.checkOnSave.command": "clippy"
 }
