--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,30 @@
 {
   "coc.preferences.formatOnType": true,
   "rust-analyzer.updates.channel": "nightly",
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "languageserver": {
+    "terraform": {
+      "command": "terraform-ls",
+      "args": ["serve"],
+      "filetypes": [
+        "terraform",
+        "tf"
+      ],
+      "initializationOptions": {},
+      "settings": {}
+    },
+    "efm": {
+      "command": "efm-langserver",
+      "args": [],
+      "filetypes": ["markdown", "sh", "dockerfile"]
+    },
+    "haskell": {
+      "command": "haskell-language-server-wrapper",
+      "args": ["--lsp"],
+      "rootPatterns": ["*.cabal","stack.yaml", "cabal.project", "package.yanl", "hie.yanl"],
+      "filetypes": ["haskell", "lhaskell"]
+    }
+  },
+  "rust-analyzer.cargo.loadOutDirsFromCheck": true,
+  "rust-analyzer.procMacro.enable": true
 }
