--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -53,3 +53,9 @@ repo = 'rust-lang/rust.vim'
 repo = 'hashivim/vim-terraform'
 on_ft = ['tf']
 
+[[plugins]]
+repo = 'tyru/eskk.vim'
+on_i = 1
+hook_post_source = '''
+lua require('plugins.eskk')
+'''
