--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -43,8 +43,62 @@ repo = 'hashivim/vim-terraform'
 on_ft = ['terraform']
 
 [[plugins]]
-repo = 'tyru/eskk.vim'
-on_i = 1
-hook_post_source = '''
-lua require('plugins.eskk')
+repo = 'segeljakt/vim-silicon'
+on_cmd = ['Silicon']
+hook_add = '''
+lua << EOF
+  local silicon = {}
+  silicon['theme'] = 'Dracula'
+  silicon['font'] = 'HackGen'
+  silicon['background'] = '#AAAAFF'
+  silicon['shadow-color'] = '#555555'
+  silicon['line-pad'] = 2
+  silicon['pad-horiz'] = 80
+  silicon['pad-vert'] = 10
+  silicon['shadow-blur-radius'] = 0
+  silicon['shadow-offset-x'] = 0
+  silicon['shadow-offset-y'] = 0
+  silicon['line-number'] = true
+  silicon['round-corner'] = true
+  silicon['window-controls'] = true
+  silicon['output'] = '~/Pictures/silicon-{time:%Y-%m-%d-%H%M%S}.png'
+  vim.api.nvim_set_var('silicon', silicon)
+EOF
 '''
+
+[[plugins]]
+repo = 'mmisono/viminesweeper'
+on_cmd = ['MineSweeper']
+
+[[plugins]]
+repo = 'skanehira/badapple.vim'
+on_cmd = ['BadApple']
+
+[[plugins]]
+repo = 'bellflower2015/vim-syntax-tyranoscript'
+on_ft = ['TyranoScript']
+
+[[plugins]]
+repo = 'mattn/vim-maketable'
+on_ft = ['markdown']
+
+[[plugins]]
+repo = 'koron/nyancat-vim'
+on_cmd = ['Nyancat', 'Nyancat2']
+
+[[plugins]]
+repo = 'rhysd/vim-goyacc'
+on_path = '*.go.y'
+
+[[plugins]]
+repo = 'qnighy/satysfi.vim'
+on_path = '*.saty?h'
+
+[[plugins]]
+repo = 'jceb/vim-orgmode'
+on_path = '*.org'
+
+[[plugins]]
+repo = 'skanehira/gyazo.vim'
+on_cmd = 'GyazoUplaod'
+
