--- a/denops.toml
+++ b/denops.toml
@@ -12,25 +12,58 @@ let g:dps_ghosttext#ftmap = {
 [[plugins]]
 repo = 'skanehira/denops-docker.vim'
 
+# [[plugins]]
+# repo = 'vim-skk/skkeleton'
+# hook_add = '''
+#   autocmd User skkeleton-enable-pre let b:coc_suggest_disable = v:true
+#   autocmd User skkeleton-disable-pre let b:coc_suggest_disable = v:false
+#   imap <C-j> <Plug>(skkeleton-toggle)
+#   cmap <C-j> <Plug>(skkeleton-toggle)
+#   autocmd User skkeleton-initialize-post call skkeleton#config({"eggLikeNewline": v:true, "keepState": v:true})
+#   if has('mac')
+#     autocmd User skkeleton-initialize-post call skkeleton#config({"globalJisyo": expand("~/Library/Application Support/AquaSKK/SKK-JISYO.L")})
+#   else
+#   endif
+#   call skkeleton#register_kanatable('rom', {
+#     \ "z\<Space>": ["\u3000", ''],
+#     \ "z,": ['―', ''],
+#     \ "<<": ['《', ''],
+#     \ ">>": ['》', ''],
+#     \ "(": ['（', ''],
+#     \ ")": ["）", ''],
+#     \ "z|": ['｜', ''],
+#   \ })
+# '''
+
 [[plugins]]
-repo = 'vim-skk/denops-skkeleton.vim'
-hook_add = '''
+repo = 'gamoutatsumi/denops-skkeleton.vim'
+rev = 'feature/skk-server'
+hook_post_source = '''
   autocmd User skkeleton-enable-pre let b:coc_suggest_disable = v:true
   autocmd User skkeleton-disable-pre let b:coc_suggest_disable = v:false
   imap <C-j> <Plug>(skkeleton-toggle)
   cmap <C-j> <Plug>(skkeleton-toggle)
-  autocmd User skkeleton-initialize-post call skkeleton#config({"eggLikeNewline": v:true, "keepState": v:true})
+  autocmd User skkeleton-initialize-pre call skkeleton#config({"eggLikeNewline": v:true, "keepState": v:true , "useSkkServer": v:true})
   if has('mac')
-    autocmd User skkeleton-initialize-post call skkeleton#config({"globalJisyo": expand("~/Library/Application Support/AquaSKK/SKK-JISYO.L")})
+    autocmd User skkeleton-initialize-pre call skkeleton#config({"globalJisyo": expand("~/Library/Application Support/AquaSKK/SKK-JISYO.L")})
   else
   endif
-  call skkeleton#register_kanatable('rom', {
-    \ "z\<Space>": ["\u3000", ''],
-    \ "z,": ['―', ''],
-    \ "<<": ['《', ''],
-    \ ">>": ['》', ''],
-    \ "(": ['（', ''],
-    \ ")": ["）", ''],
-    \ "z|": ['｜', ''],
-  \ })
+  function s:skkeleton_init_kanatable()
+    call skkeleton#register_kanatable('rom', {
+      \ "z\<Space>": ["\u3000", ''],
+      \ "z,": ['―', ''],
+      \ "<<": ['《', ''],
+      \ ">>": ['》', ''],
+      \ "(": ['（', ''],
+      \ ")": ["）", ''],
+      \ "z|": ['｜', ''],
+    \ })
+  endfunction
+  autocmd User skkeleton-initialize-post call s:skkeleton_init_kanatable()
+'''
+
+[[plugins]]
+repo = 'gamoutatsumi/dps-gyazo.vim'
+hook_add = '''
+  let g:gyazo#token=$GYAZO_TOKEN
 '''
