--- a/ddc.toml
+++ b/ddc.toml
@@ -43,8 +43,18 @@ repo = 'Shougo/neco-vim'
 [[plugins]]
 repo = 'cohama/lexima.vim'
 
+
+[[plugins]]
+repo = 'gamoutatsumi/ddc-emoji'
+
 [[multiple_plugins]]
-plugins = ['ddc.vim', 'ddc-matcher_fuzzy', 'ddc-sorter_rank', 'ddc-nvim-lsp', 'ddc-nvim-lsp-doc', 'ddc-file', 'ddc-around', 'denops-skkeleton.vim', 'pum.vim', 'neco-vim', 'lexima.vim', 'vim-vsnip', 'vim-vsnip-integ']
+plugins = [
+  'ddc.vim', 'ddc-matcher_fuzzy', 'ddc-sorter_rank',
+  'ddc-nvim-lsp', 'ddc-nvim-lsp-doc', 'ddc-file',
+  'ddc-around', 'denops-skkeleton.vim', 'pum.vim',
+  'neco-vim', 'lexima.vim', 'vim-vsnip',
+  'vim-vsnip-integ', 'ddc-emoji'
+]
 hook_add = '''
   let g:lexima_map_escape = '<Plug>(lexima-escape)'
   let g:lexima_no_default_rules = v:true
@@ -57,13 +67,10 @@ hook_add = '''
     smap <silent><expr> <TAB> vsnip#jumpable(1) ? '<Plug>(vsnip-jump-next)' : '<TAB>'
     imap <silent><expr> <S-TAB> pum#visible() ? '<Cmd>call pum#map#insert_relative(-1)<CR>' : vsnip#jumpable(-1) ? '<Plug>(vsnip-jump-prev)' : '<S-TAB>'
     smap <silent><expr> <S-TAB> vsnip#jumpable(-1) ? '<Plug>(vsnip-jump-prev)' : '<S-TAB>'
-    imap <silent><expr> <CR> pum#visible() ? '<Cmd>call pum#map#confirm()<CR>' : lexima#expand('<LT>CR>', 'i')
+    inoremap <silent><expr> <CR> pum#visible() ? '<Cmd>call pum#map#confirm()<CR>' : lexima#expand('<LT>CR>', 'i')
     imap <silent><expr> <Esc> pum#visible() ? '<Cmd>call pum#map#cancel()<CR>' : '<Plug>(lexima-escape)'
 
-    cmap <silent><expr> <TAB> pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : '<TAB>'
-    cmap <silent><expr> <S-TAB> pum#visible() ? '<Cmd>call pum#map#insert_relative(-1)<CR>' : '<C-h>'
-    cmap <silent><expr> <CR> pum#visible() ? '<Cmd>call pum#map#confirm()<CR>' : '<CR>'
-    cmap <silent><expr> <Esc> pum#visible() ? '<Cmd>call pum#map#cancel()<CR>' : '<C-c>'
+    autocmd User PumCompleteDone call vsnip_integ#on_complete_done(g:pum#completed_item)
   endfunction
 
   function! s:ddcinit() abort
@@ -73,7 +80,8 @@ hook_add = '''
     call ddc#custom#patch_global('backspaceCompletion', v:true)
     call ddc#custom#patch_global('autoCompleteEvents',
       \ ['InsertEnter', 'TextChangedI', 'TextChangedP', 'CmdlineChanged'])
-    call ddc#custom#patch_global('sources', ['skkeleton', 'nvim-lsp', 'around', 'file'])
+    call ddc#custom#patch_global('sources', ['skkeleton', 'nvim-lsp', 'around', 'file', 'emoji'])
+    call ddc#custom#patch_global('keywordPattern', '[a-zA-Z_:]\w*')
     call ddc#custom#patch_global('sourceOptions', {
     \ '_': { 'matchers': ['matcher_fuzzy'], 'sorters': ['sorter_rank'] },
     \ 'nvim-lsp': { 'mark': 'lsp', 'forceCompletionPattern': '\.\w*|:\w*|->\w*|"\w*', 'ignoreCase': v:true },
@@ -90,7 +98,12 @@ hook_add = '''
     \   'mark': 'skk',
     \   'matchers': ['skkeleton'],
     \   'sorterts': [],
-    \  },
+    \ },
+    \ 'emoji': {
+    \   'mark': 'emoji',
+    \   'matchers': ['emoji'],
+    \   'sorters': [],
+    \ }
     \ })
 
     LspStart
@@ -101,32 +114,30 @@ hook_add = '''
 
   function! CommandlinePre() abort
     let s:prev_buffer_config = ddc#custom#get_buffer()
-    call ddc#custom#patch_buffer('sources', ['necovim', 'around'])
+    call ddc#custom#patch_buffer('sources', ['necovim', 'around', 'file'])
     call ddc#custom#patch_buffer('sourceOptions', {
     \ 'necovim': {'mark': 'V', 'minAutoCompleteLength': 3, 'ignoreCase': v:true},
     \ 'around': {'mark': 'A', 'minAutoCompleteLength': 3},
     \ })
-    autocmd CmdlineLeave * call CommandlinePost()
     call ddc#enable_cmdline_completion()
-  endfunction
+    cmap <silent><expr> <TAB> pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : '<TAB>'
+    cmap <silent><expr> <S-TAB> pum#visible() ? '<Cmd>call pum#map#insert_relative(-1)<CR>' : '<C-h>'
+    cmap <silent><expr> <CR> pum#visible() ? '<Cmd>call pum#map#confirm()<CR>' : '<CR>'
+    cmap <silent><expr> <Esc> pum#visible() ? '<Cmd>call pum#map#cancel()<CR>' : '<C-c>'
 
-  function! SearchlinePre() abort
-    let s:prev_buffer_config = ddc#custom#get_buffer()
-    call ddc#custom#patch_buffer('sources', ['around'])
-    call ddc#custom#patch_buffer('sourceOptions', {
-    \ 'around': {'mark': 'A', 'minAutoCompleteLength': 3},
-    \ })
-    autocmd CmdlineLeave * call CommandlinePost()
-    call ddc#enable_cmdline_completion()
+    autocmd CmdlineLeave ++once * call CommandlinePost()
   endfunction
 
   function! CommandlinePost() abort
+    cunmap <TAB>
+    cunmap <S-TAB>
+    cunmap <CR>
+    cunmap <Esc>
     call ddc#custom#set_buffer(s:prev_buffer_config)
   endfunction
 
   nnoremap : <Cmd>call CommandlinePre()<CR>:
   nnoremap ; <Cmd>call CommandlinePre()<CR>:
-  nnoremap / <Cmd>call SearchlinePre()<CR>/
 
   autocmd User DenopsReady call s:ddcinit()
 '''
